# AI_agentic_patterns

./: README.md  pyproject.toml
notebooks/: planning_pattern.ipynb  reflection_pattern.ipynb  tool_pattern.ipynb
src/agentic_patterns/planning_pattern/: react_agent.py
src/agentic_patterns/tool_pattern/: tool.py
src/agentic_patterns/utils/: completions.py
