[project]
name = "agentic-patterns"
version = "0.1.0"
description = "This is the module to study and learn about AI agentic patterns from scratch"
authors = [
    {name = "Aditya",email = "adityaomar33@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq (>=0.22.0,<0.23.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "types-colorama (>=0.4.15.20240311,<0.5.0.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
